@@ -8,6 +8,9 @@ git-annex (3.20120431) UNRELEASED; urgency=low
   * dropunused: Allow specifying ranges to drop.
   * addunused: New command, the opposite of dropunused, it relinks unused
     content into the git repository.
+  * Fix use of several config settings annex.ssh-options,
+    annex.rsync-options, annex.bup-split-options. (And adjust types to avoid
+    the bugs that broke several config settings.)
 
  -- Joey Hess <joeyh@debian.org>  Wed, 02 May 2012 13:06:18 -0400
 
